--- a/src/pages/css/login.css
+++ b/src/pages/css/login.css
@@ -3,5 +3,42 @@
   width: 50%;
   padding: 10px;
   margin-top: 20%;
+}
 
+
+
+@media (min-width: 768px) {
+  .image {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    margin-top: 40%;
+  }
+}
+
+@media (min-width: 950px) {
+  .image {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    margin-top: 40%;
+  }
+}
+
+@media (min-width: 992px) {
+  .image {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    margin-top: 20%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .image {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    margin-top: 20%;
+  }
 }
